src/main/java/CmmParser.java
// Generated from CmmParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
    static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SPACE=1, SL_COMMENT=2, ML_COMMENT=3, DOT=4, TYPE=5, SEMI=6, COMMA=7, ASSIGNOP=8,
            RELOP=9, PLUS=10, MINUS=11, STAR=12, DIV=13, AND=14, OR=15, NOT=16, LP=17,
            RP=18, LB=19, RB=20, LC=21, RC=22, STRUCT=23, RETURN=24, IF=25, ELSE=26,
            WHILE=27, INT=28, FLOAT=29, ID=30;
    public static final int
            RULE_program = 0, RULE_extDef = 1, RULE_extDecList = 2, RULE_specifier = 3,
            RULE_structSpecifier = 4, RULE_optTag = 5, RULE_tag = 6, RULE_varDec = 7,
            RULE_funDec = 8, RULE_varList = 9, RULE_paramDec = 10, RULE_compSt = 11,
            RULE_stmtList = 12, RULE_stmt = 13, RULE_defList = 14, RULE_def = 15,
            RULE_decList = 16, RULE_dec = 17, RULE_exp = 18, RULE_args = 19;
    private static String[] makeRuleNames() {
        return new String[] {
                "program", "extDef", "extDecList", "specifier", "structSpecifier", "optTag",
                "tag", "varDec", "funDec", "varList", "paramDec", "compSt", "stmtList",
                "stmt", "defList", "def", "decList", "dec", "exp", "args"
        };
    }
    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
                null, null, null, null, "'.'", null, null, null, null, null, null, null,
                null, null, "'&&'", "'||'", "'!'", "'('", "')'", "'['", "']'", "'{'",
                "'}'", "'struct'", "'return'", "'if'", "'else'", "'while'"
        };
    }
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static String[] makeSymbolicNames() {
        return new String[] {
                null, "SPACE", "SL_COMMENT", "ML_COMMENT", "DOT", "TYPE", "SEMI", "COMMA",
                "ASSIGNOP", "RELOP", "PLUS", "MINUS", "STAR", "DIV", "AND", "OR", "NOT",
                "LP", "RP", "LB", "RB", "LC", "RC", "STRUCT", "RETURN", "IF", "ELSE",
                "WHILE", "INT", "FLOAT", "ID"
        };
    }
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() { return "CmmParser.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public CmmParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
    }

    public static class ProgramContext extends ParserRuleContext {
        public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
        public List<ExtDefContext> extDef() {
            return getRuleContexts(ExtDefContext.class);
        }
        public ExtDefContext extDef(int i) {
            return getRuleContext(ExtDefContext.class,i);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_program; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterProgram(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitProgram(this);
        }
    }

    public final ProgramContext program() throws RecognitionException {
        ProgramContext _localctx = new ProgramContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_program);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(43);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==TYPE || _la==STRUCT) {
                    {
                        {
                            setState(40);
                            extDef();
                        }
                    }
                    setState(45);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(46);
                match(EOF);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExtDefContext extends ParserRuleContext {
        public SpecifierContext specifier() {
            return getRuleContext(SpecifierContext.class,0);
        }
        public ExtDecListContext extDecList() {
            return getRuleContext(ExtDecListContext.class,0);
        }
        public TerminalNode SEMI() { return getToken(CmmParser.SEMI, 0); }
        public FunDecContext funDec() {
            return getRuleContext(FunDecContext.class,0);
        }
        public CompStContext compSt() {
            return getRuleContext(CompStContext.class,0);
        }
        public ExtDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_extDef; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterExtDef(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitExtDef(this);
        }
    }

    public final ExtDefContext extDef() throws RecognitionException {
        ExtDefContext _localctx = new ExtDefContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_extDef);
        try {
            setState(59);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(48);
                    specifier();
                    setState(49);
                    extDecList();
                    setState(50);
                    match(SEMI);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(52);
                    specifier();
                    setState(53);
                    match(SEMI);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(55);
                    specifier();
                    setState(56);
                    funDec();
                    setState(57);
                    compSt();
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ExtDecListContext extends ParserRuleContext {
        public List<VarDecContext> varDec() {
            return getRuleContexts(VarDecContext.class);
        }
        public VarDecContext varDec(int i) {
            return getRuleContext(VarDecContext.class,i);
        }
        public List<TerminalNode> COMMA() { return getTokens(CmmParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(CmmParser.COMMA, i);
        }
        public ExtDecListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_extDecList; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterExtDecList(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitExtDecList(this);
        }
    }

    public final ExtDecListContext extDecList() throws RecognitionException {
        ExtDecListContext _localctx = new ExtDecListContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_extDecList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                varDec();
                setState(66);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==COMMA) {
                    {
                        {
                            setState(62);
                            match(COMMA);
                            setState(63);
                            varDec();
                        }
                    }
                    setState(68);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class SpecifierContext extends ParserRuleContext {
        public TerminalNode TYPE() { return getToken(CmmParser.TYPE, 0); }
        public StructSpecifierContext structSpecifier() {
            return getRuleContext(StructSpecifierContext.class,0);
        }
        public SpecifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_specifier; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterSpecifier(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitSpecifier(this);
        }
    }

    public final SpecifierContext specifier() throws RecognitionException {
        SpecifierContext _localctx = new SpecifierContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_specifier);
        try {
            setState(71);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TYPE:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(69);
                    match(TYPE);
                }
                break;
                case STRUCT:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(70);
                    structSpecifier();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StructSpecifierContext extends ParserRuleContext {
        public TerminalNode STRUCT() { return getToken(CmmParser.STRUCT, 0); }
        public OptTagContext optTag() {
            return getRuleContext(OptTagContext.class,0);
        }
        public TerminalNode LC() { return getToken(CmmParser.LC, 0); }
        public DefListContext defList() {
            return getRuleContext(DefListContext.class,0);
        }
        public TerminalNode RC() { return getToken(CmmParser.RC, 0); }
        public TagContext tag() {
            return getRuleContext(TagContext.class,0);
        }
        public StructSpecifierContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_structSpecifier; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterStructSpecifier(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitStructSpecifier(this);
        }
    }

    public final StructSpecifierContext structSpecifier() throws RecognitionException {
        StructSpecifierContext _localctx = new StructSpecifierContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_structSpecifier);
        try {
            setState(81);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(73);
                    match(STRUCT);
                    setState(74);
                    optTag();
                    setState(75);
                    match(LC);
                    setState(76);
                    defList();
                    setState(77);
                    match(RC);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(79);
                    match(STRUCT);
                    setState(80);
                    tag();
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OptTagContext extends ParserRuleContext {
        public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
        public OptTagContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_optTag; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterOptTag(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitOptTag(this);
        }
    }

    public final OptTagContext optTag() throws RecognitionException {
        OptTagContext _localctx = new OptTagContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_optTag);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la==ID) {
                    {
                        setState(83);
                        match(ID);
                    }
                }

            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TagContext extends ParserRuleContext {
        public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
        public TagContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_tag; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterTag(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitTag(this);
        }
    }

    public final TagContext tag() throws RecognitionException {
        TagContext _localctx = new TagContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_tag);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(86);
                match(ID);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarDecContext extends ParserRuleContext {
        public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
        public TerminalNode ID(int i) {
            return getToken(CmmParser.ID, i);
        }
        public List<TerminalNode> LB() { return getTokens(CmmParser.LB); }
        public TerminalNode LB(int i) {
            return getToken(CmmParser.LB, i);
        }
        public List<TerminalNode> INT() { return getTokens(CmmParser.INT); }
        public TerminalNode INT(int i) {
            return getToken(CmmParser.INT, i);
        }
        public List<TerminalNode> RB() { return getTokens(CmmParser.RB); }
        public TerminalNode RB(int i) {
            return getToken(CmmParser.RB, i);
        }
        public List<TerminalNode> FLOAT() { return getTokens(CmmParser.FLOAT); }
        public TerminalNode FLOAT(int i) {
            return getToken(CmmParser.FLOAT, i);
        }
        public VarDecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_varDec; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterVarDec(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitVarDec(this);
        }
    }

    public final VarDecContext varDec() throws RecognitionException {
        VarDecContext _localctx = new VarDecContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_varDec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(ID);
                setState(102);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==LB) {
                    {
                        setState(100);
                        _errHandler.sync(this);
                        switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
                            case 1:
                            {
                                {
                                    setState(89);
                                    match(LB);
                                    setState(90);
                                    match(INT);
                                    setState(91);
                                    match(RB);
                                }
                            }
                            break;
                            case 2:
                            {
                                {
                                    setState(92);
                                    match(LB);
                                    notifyErrorListeners("array size must be an integer constant, not FLOAT");
                                    setState(94);
                                    match(FLOAT);
                                    setState(95);
                                    match(RB);
                                }
                            }
                            break;
                            case 3:
                            {
                                {
                                    setState(96);
                                    match(LB);
                                    notifyErrorListeners("array size must be an integer constant, not ID");
                                    setState(98);
                                    match(ID);
                                    setState(99);
                                    match(RB);
                                }
                            }
                            break;
                        }
                    }
                    setState(104);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunDecContext extends ParserRuleContext {
        public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
        public TerminalNode LP() { return getToken(CmmParser.LP, 0); }
        public VarListContext varList() {
            return getRuleContext(VarListContext.class,0);
        }
        public TerminalNode RP() { return getToken(CmmParser.RP, 0); }
        public FunDecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_funDec; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterFunDec(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitFunDec(this);
        }
    }

    public final FunDecContext funDec() throws RecognitionException {
        FunDecContext _localctx = new FunDecContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_funDec);
        try {
            setState(113);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(105);
                    match(ID);
                    setState(106);
                    match(LP);
                    setState(107);
                    varList();
                    setState(108);
                    match(RP);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(110);
                    match(ID);
                    setState(111);
                    match(LP);
                    setState(112);
                    match(RP);
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarListContext extends ParserRuleContext {
        public List<ParamDecContext> paramDec() {
            return getRuleContexts(ParamDecContext.class);
        }
        public ParamDecContext paramDec(int i) {
            return getRuleContext(ParamDecContext.class,i);
        }
        public List<TerminalNode> COMMA() { return getTokens(CmmParser.COMMA); }
        public TerminalNode COMMA(int i) {
            return getToken(CmmParser.COMMA, i);
        }
        public VarListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_varList; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterVarList(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitVarList(this);
        }
    }

    public final VarListContext varList() throws RecognitionException {
        VarListContext _localctx = new VarListContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_varList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                paramDec();
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==COMMA) {
                    {
                        {
                            setState(116);
                            match(COMMA);
                            setState(117);
                            paramDec();
                        }
                    }
                    setState(122);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ParamDecContext extends ParserRuleContext {
        public SpecifierContext specifier() {
            return getRuleContext(SpecifierContext.class,0);
        }
        public VarDecContext varDec() {
            return getRuleContext(VarDecContext.class,0);
        }
        public ParamDecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_paramDec; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterParamDec(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitParamDec(this);
        }
    }

    public final ParamDecContext paramDec() throws RecognitionException {
        ParamDecContext _localctx = new ParamDecContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_paramDec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(123);
                specifier();
                setState(124);
                varDec();
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class CompStContext extends ParserRuleContext {
        public TerminalNode LC() { return getToken(CmmParser.LC, 0); }
        public DefListContext defList() {
            return getRuleContext(DefListContext.class,0);
        }
        public StmtListContext stmtList() {
            return getRuleContext(StmtListContext.class,0);
        }
        public TerminalNode RC() { return getToken(CmmParser.RC, 0); }
        public CompStContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_compSt; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterCompSt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitCompSt(this);
        }
    }

    public final CompStContext compSt() throws RecognitionException {
        CompStContext _localctx = new CompStContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_compSt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                match(LC);
                setState(127);
                defList();
                setState(128);
                stmtList();
                setState(129);
                match(RC);
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StmtListContext extends ParserRuleContext {
        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }
        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class,i);
        }
        public StmtListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_stmtList; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterStmtList(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitStmtList(this);
        }
    }

    public final StmtListContext stmtList() throws RecognitionException {
        StmtListContext _localctx = new StmtListContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_stmtList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(134);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << NOT) | (1L << LP) | (1L << LC) | (1L << RETURN) | (1L << IF) | (1L << WHILE) | (1L << INT) | (1L << FLOAT) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(131);
                            stmt();
                        }
                    }
                    setState(136);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class StmtContext extends ParserRuleContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class,0);
        }
        public TerminalNode SEMI() { return getToken(CmmParser.SEMI, 0); }
        public CompStContext compSt() {
            return getRuleContext(CompStContext.class,0);
        }
        public TerminalNode RETURN() { return getToken(CmmParser.RETURN, 0); }
        public TerminalNode IF() { return getToken(CmmParser.IF, 0); }
        public TerminalNode LP() { return getToken(CmmParser.LP, 0); }
        public TerminalNode RP() { return getToken(CmmParser.RP, 0); }
        public List<StmtContext> stmt() {
            return getRuleContexts(StmtContext.class);
        }
        public StmtContext stmt(int i) {
            return getRuleContext(StmtContext.class,i);
        }
        public TerminalNode ELSE() { return getToken(CmmParser.ELSE, 0); }
        public TerminalNode WHILE() { return getToken(CmmParser.WHILE, 0); }
        public StmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_stmt; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterStmt(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitStmt(this);
        }
    }

    public final StmtContext stmt() throws RecognitionException {
        StmtContext _localctx = new StmtContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_stmt);
        try {
            setState(165);
            _errHandler.sync(this);
            switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(137);
                    exp(0);
                    setState(138);
                    match(SEMI);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(140);
                    compSt();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(141);
                    match(RETURN);
                    setState(142);
                    exp(0);
                    setState(143);
                    match(SEMI);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(145);
                    match(IF);
                    setState(146);
                    match(LP);
                    setState(147);
                    exp(0);
                    setState(148);
                    match(RP);
                    setState(149);
                    stmt();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(151);
                    match(IF);
                    setState(152);
                    match(LP);
                    setState(153);
                    exp(0);
                    setState(154);
                    match(RP);
                    setState(155);
                    stmt();
                    setState(156);
                    match(ELSE);
                    setState(157);
                    stmt();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(159);
                    match(WHILE);
                    setState(160);
                    match(LP);
                    setState(161);
                    exp(0);
                    setState(162);
                    match(RP);
                    setState(163);
                    stmt();
                }
                break;
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DefListContext extends ParserRuleContext {
        public List<DefContext> def() {
            return getRuleContexts(DefContext.class);
        }
        public DefContext def(int i) {
            return getRuleContext(DefContext.class,i);
        }
        public DefListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_defList; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterDefList(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitDefList(this);
        }
    }

    public final DefListContext defList() throws RecognitionException {
        DefListContext _localctx = new DefListContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_defList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(170);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la==TYPE || _la==STRUCT) {
                    {
                        {
                            setState(167);
                            def();
                        }
                    }
                    setState(172);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        }
        catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        }
        finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DefContext extends ParserRuleContext {
        public SpecifierContext specifier() {
            return getRuleContext(SpecifierContext.class,0);
        }
        public DecListContext decList() {
            return getRuleContext(DecListContext.class,0);
        }
        public TerminalNode SEMI() { return getToken(CmmParser.SEMI, 0); }
        public DefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }
        @Override public int getRuleIndex() { return RULE_def; }
        @Override
        public void enterRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).enterDef(this);
        }
        @Override
        public void exitRule(ParseTreeListener listener) {
            if ( listener instanceof CmmParserListener ) ((CmmParserListener)listener).exitDef(this);
        }
    }
